--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">																										
 							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-0c4c1d824ad2d2aa3eedcdabc9dc48ff.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/xian-wang-de-richang-shenghuo"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43014/large.jpg" alt="The Daily Life of the Immortal King"></img></a>																					
+							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/yofukashi-no-uta"><img class="tile-image" src="https://media.kitsu.io/anime/45483/poster_image/large-d9d78c62b3f81a732df8d44f158a0c11.jpeg" alt="Call of the Night"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>							
@@ -149,6 +148,7 @@
 							<a class="tile" href="https://kitsu.io/anime/chainsaw-man"><img class="tile-image" src="https://media.kitsu.io/anime/43806/poster_image/large-815d6008fb3b56f4291b9f0ffa05cd8f.jpeg" alt="Chainsaw Man"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/koukyuu-no-karasu"><img class="tile-image" src="https://media.kitsu.io/anime/45591/poster_image/large-af831d94bbd2ab2dd2123e21d0a7fedd.jpeg" alt="Raven in the Inner Palace"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/fuufu-ijou-koibito-miman"><img class="tile-image" src="https://media.kitsu.io/anime/45521/poster_image/large-aa4976026d5b59706b89e8e6d4b2922a.jpeg" alt="More than a married couple, but not lovers"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kinsou-no-vermeil-gakeppuchi-majutshi-wa-saikyou-no-yakusai-to-mahou-sekai-wo-tsukisusumu"><img class="tile-image" src="https://media.kitsu.io/anime/45956/poster_image/large-ace4e3044020fca481c331e09ffdcadc.jpeg" alt="Vermeil in Gold"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
 						</div><!-- tiled-list -->
@@ -179,7 +179,7 @@
 							<a class="tile" href="https://kitsu.io/anime/edens-zero-2"><img class="tile-image" src="https://media.kitsu.io/anime/45847/poster_image/large-60b4444bbaf919da7e0983e86eb96d36.jpeg" alt="Edens Zero 2nd Season"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45950/poster_image/large-179e4b91171bf757034ecaea52195af6.jpeg" alt="Mushoku Tensei: Jobless Reincarnation Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-bakuen-wo"><img class="tile-image" src="https://media.kitsu.io/anime/46139/poster_image/large-e050155e49b41f49052f3da5a4e2eacb.jpeg" alt="Konosuba: An Explosion of this Wonderful World"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/black-clover-mahou-tei-no-ken"><img class="tile-image" src="https://media.kitsu.io/anime/44242/poster_image/large-d84962f7454abe47f33c5903996e0d6d.jpeg" alt="Black Clover: Sword of the Wizard King"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/black-clover-mahou-tei-no-ken"><img class="tile-image" src="https://media.kitsu.io/anime/44242/poster_image/large-6e9068f36a9f0a8e0f4dda59b4d8f8cb.jpeg" alt="Black Clover: Sword of the Wizard King"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/itai-no-wa-Iya-nano-de-bougyoryoku%20ni-kyokufuri-shitai-to-omoimasu-ii"><img class="tile-image" src="https://media.kitsu.io/anime/43086/poster_image/large-ed438c60176e7e19dbb352afcffe21c7.jpeg" alt="BOFURI 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii-2"><img class="tile-image" src="https://media.kitsu.io/anime/45415/poster_image/large-3eb600c7623df1ff3c3a12610bd9d472.jpeg" alt="TONIKAWA: Over the Moon For You 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-268b9d2c1e691a691cc2f26b9f2436a1.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
@@ -547,9 +547,12 @@
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="OP_ED-anime">Samurai Champloo,</span><span class="OP_ED-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>						
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/EzGs8Tm_C2g"><span class="OP_ED-anime">SPY x FAMILY,</span><span class="OP_ED-title">"Mixed Nuts" by Official Hige Dandism</span></a></div>						
 						<button onclick="more_OP_ED_item_op_btn()" id="more_OP_ED_item_op_btn" class="btn-pill-full-width">Show more</button>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/XcuJeUtFUbA"><span class="OP_ED-anime">Shadow House 2,</span><span class="OP_ED-title">"Shall We Dance?" by ReoNa</span></a></div>						
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Hello,world!" by Bump of Chicken</span></a></div>						
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="OP_ED-anime">No Game No Life,</span><span class="OP_ED-title">"This Game" by Konomi Suzuki</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="OP_ED-anime">Death Parade,</span><span class="OP_ED-title">"Flyers" by BRADIO</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="OP_ED-anime">One Punch Man,</span><span class="OP_ED-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Hlw8dTz_iq0"><span class="OP_ED-anime">SPY x FAMILY 2,</span><span class="OP_ED-title">"Souvenir" by Bump of Chicken</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="OP_ED-anime">New Game!,</span><span class="OP_ED-title">"Sakura Skip" by Fourfolium</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/SaKdpMnwZf0"><span class="OP_ED-anime">Domestic Girlfriend,</span><span class="OP_ED-title">"Kawaki wo Ameku" by Minami</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/7-EwChG1WTA"><span class="OP_ED-anime">Laid-Back Camp,</span><span class="OP_ED-title">"SHINY DAYS" by Asaka</span></a></div>
@@ -557,29 +560,34 @@
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/Ln6NpxYb73k"><span class="OP_ED-anime">Recovery of an MMO Junkie,</span><span class="OP_ED-title">"Saturday Night Question" by Megumi Nakajima</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/4evV8Fr5A8U"><span class="OP_ED-anime">Black Clover,</span><span class="OP_ED-title">"Black Catcher" by Vickeblanka</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aJRu5ltxXjc"><span class="OP_ED-anime">Naruto Shippuden,</span><span class="OP_ED-title">"Blue Bird" by Ikimono Gakari</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/huuLekCNAGk"><span class="OP_ED-anime">The Slime Diaries,</span><span class="OP_ED-title">"Brand New Diary" by Akane Kumada</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/aZenmeRytEM"><span class="OP_ED-anime">Noragami Aragoto,</span><span class="OP_ED-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/fQwZ6bOW09k"><span class="OP_ED-anime">My Roommate is a Cat,</span><span class="OP_ED-title">"Unknown World" by Schrodinger's Cat adding Kotringo</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/tlrPO6dBaxw"><span class="OP_ED-anime">Sakura Quest,</span><span class="OP_ED-title">"Morning Glory" by (K)NoW_NAME</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/MN_WgwEmRaw"><span class="OP_ED-anime">Spice and Wolf,</span><span class="OP_ED-title">"Tabi no Tochuu" by Natsumi Kiyoura</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/82mm5JvJOmo"><span class="OP_ED-anime">Flying Witch,</span><span class="OP_ED-title">"Shanranran" by Miwa Feat 96 Neko</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/-eYK3YP524A"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Papermoon" by Tommy Heavenly6</span></a></div>
 					</div><!--OPs-->
 					
 					<div class="favorite-item"><!--EDs-->
 						<h2 class="section-heading">Anime EDs</h2>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/j3SlUmr_T4g"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Sugar Song to Bitter Step" by Unison Square Garden</span></a></div>
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/xBSG2hZXTF0"><span class="OP_ED-anime">SPY x FAMILY 2,</span><span class="OP_ED-title">"Shikisai" by Yama</span></a></div>
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/wwQGn-5A2HE"><span class="OP_ED-anime">Fire Force,</span><span class="OP_ED-title">"Veil" by Keina Suda</span></a></div>
-						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/i8Yjk7KedVg"><span class="OP_ED-anime">Mob Psycho 100,</span><span class="OP_ED-title">"Refrain Boy" by Von ALL OFF</span></a></div>
-						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="OP_ED-anime">Kobayashi's Dragon Maid,</span><span class="OP_ED-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
+						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/i8Yjk7KedVg"><span class="OP_ED-anime">Mob Psycho 100,</span><span class="OP_ED-title">"Refrain Boy" by Von ALL OFF</span></a></div>						
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Gdt4h0ZobfI"><span class="OP_ED-anime">K-ON!,</span><span class="OP_ED-title">"Don't Say Lazy" by Sakurakou K-ON Bu</span></a></div>
 						<button onclick="more_OP_ED_item_ed_btn()" id="more_OP_ED_item_ed_btn" class="btn-pill-full-width">Show more</button>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/6riDJMI-Y8U"><span class="OP_ED-anime">Jujutsu Kaisen,</span><span class="OP_ED-title">"Lost in Paradise" feat. AKLO by ALI</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/-rokG9XS37w"><span class="OP_ED-anime">Kaguya-sama: Love is War,</span><span class="OP_ED-title">"Chikatto Chika Chika♡"</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="OP_ED-anime">Attack on Titan Season 3,</span><span class="OP_ED-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="OP_ED-anime">Kobayashi's Dragon Maid,</span><span class="OP_ED-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/TERi1b3ISdk"><span class="OP_ED-anime">Restaurant to Another World Season 2,</span><span class="OP_ED-title">"Samenai Mahou" by Nao Toyama</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/KtsvxCnJBLs"><span class="OP_ED-anime">Skeleton Knight in Another World,</span><span class="OP_ED-title">"Bokura ga Oroka da Nante Dare ga Itta" by Dialogue+</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/gIGEbitYqL0"><span class="OP_ED-anime">Re:Zero,</span><span class="OP_ED-title">"Styx Helix" by Myth and Roid</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/VneknudkhAk"><span class="OP_ED-anime">Log Horizon Season 2,</span><span class="OP_ED-title">"Wonderful Wonder World" by Yun*chi</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/AubeXRKtU8U"><span class="OP_ED-anime">Konosuba Season 2,</span><span class="OP_ED-title">"Ouchi ni Kaeritai" by Amamiya, Takahashi, and Kayano</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/i4vcYALGVKQ"><span class="OP_ED-anime">Girlfriend, Girlfriend,</span><span class="OP_ED-title">"Pinky Hook" by Momo Asakura</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/zVt18amEVJc"><span class="OP_ED-anime">The Yakuza's Guide to Babysitting,</span><span class="OP_ED-title">"Kaerimichi no Iro" by Shibuya HAL</span></a></div>
 						<!--
 							Arslan Senkai
 							psychopass
@@ -952,6 +960,25 @@
 							</div>
 						</div>
 					</a>
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/arachnart33">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-arachnart33.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">arachnart <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @arachnart33</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/Phat_Smash">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Phat_Smash.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">PhatSmash <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @Phat_Smash</span>
+							</div>
+						</div>
+					</a>
+
 					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/EchoSaber1">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-EchoSaber1.jpg"></img>
