--- a/index.html
+++ b/index.html
@@ -136,9 +136,7 @@
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">																										
 							<a class="tile" href="https://kitsu.io/anime/sword-art-online-progressive-movie-kuraki-yuuyami-no-scherzo"><img class="tile-image" src="https://media.kitsu.io/anime/45400/poster_image/large-0c4c1d824ad2d2aa3eedcdabc9dc48ff.jpeg" alt="Sword Art Online the Movie -Progressive- Scherzo of Deep Night"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/yofukashi-no-uta"><img class="tile-image" src="https://media.kitsu.io/anime/45483/poster_image/large-d9d78c62b3f81a732df8d44f158a0c11.jpeg" alt="Call of the Night"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-iv"><img class="tile-image" src="https://media.kitsu.io/anime/44031/poster_image/large-0432f3657198d815bd3b6a1a01d2f718.jpeg" alt="Is It Wrong to Try to Pick Up Girls in a Dungeon? IV"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-movie"><img class="tile-image" src="https://media.kitsu.io/anime/44229/poster_image/large-43d280867134345ce4ad5d9b985a54ca.jpeg" alt="The Quintessential Quintuplets Movie"></img></a>																					
 							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/paripi-koumei"><img class="tile-image" src="https://media.kitsu.io/anime/45506/poster_image/large-0c2166dc88621c81ed6549f4327d97cd.jpeg" alt="Ya Boy Kongming!"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/akuyaku-reijou-nanode-last-boss-wo-kattemimashita"><img class="tile-image" src="https://media.kitsu.io/anime/45269/poster_image/large-717780f603d5ce876fb25b101e04a02b.jpeg" alt="I'm the Villainess, So I'm Taming the Final Boss"></img></a>
@@ -177,14 +175,14 @@
 							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-7d1a2866968eaa3eb34ad69b7690b358.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/edens-zero-2"><img class="tile-image" src="https://media.kitsu.io/anime/45847/poster_image/large-60b4444bbaf919da7e0983e86eb96d36.jpeg" alt="Edens Zero 2nd Season"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45950/poster_image/large-179e4b91171bf757034ecaea52195af6.jpeg" alt="Mushoku Tensei: Jobless Reincarnation Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45950/poster_image/large-3b800ee534ae2d1a85d15455529d85f3.jpeg" alt="Mushoku Tensei: Jobless Reincarnation Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-bakuen-wo"><img class="tile-image" src="https://media.kitsu.io/anime/46139/poster_image/large-e050155e49b41f49052f3da5a4e2eacb.jpeg" alt="Konosuba: An Explosion of this Wonderful World"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/black-clover-mahou-tei-no-ken"><img class="tile-image" src="https://media.kitsu.io/anime/44242/poster_image/large-6e9068f36a9f0a8e0f4dda59b4d8f8cb.jpeg" alt="Black Clover: Sword of the Wizard King"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/itai-no-wa-Iya-nano-de-bougyoryoku%20ni-kyokufuri-shitai-to-omoimasu-ii"><img class="tile-image" src="https://media.kitsu.io/anime/43086/poster_image/large-ed438c60176e7e19dbb352afcffe21c7.jpeg" alt="BOFURI 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii-2"><img class="tile-image" src="https://media.kitsu.io/anime/45415/poster_image/large-3eb600c7623df1ff3c3a12610bd9d472.jpeg" alt="TONIKAWA: Over the Moon For You 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-268b9d2c1e691a691cc2f26b9f2436a1.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-2"><img class="tile-image" src="https://media.kitsu.io/anime/45857/poster_image/large-ffbdcf4570e0e9f4c5856b79f7f473bf.jpeg" alt="Jujutsu Kaisen Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tondemo-skill-de-isekai-hourou-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46676/poster_image/large-93b65b962d48562dbdba0a0f96a9f475.jpeg" alt="Campfire Cooking in Another World with My Absurd Skill"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tondemo-skill-de-isekai-hourou-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46676/poster_image/large-ac8c77c613ea90d3282cc2b87ea4aa6e.jpeg" alt="Campfire Cooking in Another World with My Absurd Skill"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img class="tile-image" src="https://media.kitsu.io/anime/45715/poster_image/large-a32df4e0477c30b3616375baad3571e1.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>			
 							<a class="tile" href="https://kitsu.io/anime/keikenzumi-na-kimi-to-keiken-zero-na-ore-ga-otsukiai-suru-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46459/poster_image/large-5deef63ee92ae6942ea5b6c7b64d2c80.jpeg" alt="Our Dating Story"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yumemiru-danshi-wa-genjitsushugisha"><img class="tile-image" src="https://media.kitsu.io/anime/46763/poster_image/large-7f95c2017517973c1be881c9819181a4.jpeg" alt="The Dreaming Boy Is a Realist"></img></a>							
@@ -978,7 +976,33 @@
 							</div>
 						</div>
 					</a>
-
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/Superbusty2">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-Superbusty2.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">SuperBusty <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @Superbusty2</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/zefrablue">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-zefrablue.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">zefra <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @zefrablue</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/AlterLesott">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-AlterLesott.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Lesott <span class="nsfw-tag">nsfw</span></span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @AlterLesott</span>
+							</div>
+						</div>
+					</a>
 					<a class="lf-link more-lf-anipicstwitter" href="https://twitter.com/EchoSaber1">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-EchoSaber1.jpg"></img>
