fixed card spacing
removed a mistakenly included first card class causing a second card to have more space

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 								<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My-Heo_large.jpg" alt="My Hero Academia"></img></a>
 							</div>
 						</div><!--Action-->
-						<div class="tiled-list-card first-card">
+						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Adventure</h4>
 							<div class="card-tiled-list">
 								<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Vinland-Saga_large.jpg" alt="Vinland Saga"></img></a>
